--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "common"
 version = "0.1.0"
-authors = ["jD91mZM2 <LEGOlord208@krake.one>"]
+authors = ["jD91mZM2 <me@krake.one>"]
 
 [dependencies]
 rmp-serde    = "0.13"
